[gd_scene load_steps=13 format=3 uid="uid://biflar31oita2"]

[ext_resource type="Script" uid="uid://djuv3gdudk61e" path="res://scripts/menus/pause_menu.gd" id="1_hr5ih"]
[ext_resource type="Texture2D" uid="uid://cr6ns44pljosn" path="res://resources/sprites/pauseMenu.png" id="2_2yk66"]
[ext_resource type="Shader" uid="uid://bn3laa6ok6dxw" path="res://scripts/shaders/blur.gdshader" id="2_5nn8h"]
[ext_resource type="FontFile" uid="uid://cskltmfvwlc7g" path="res://resources/fonts/Audiowide-Regular.ttf" id="2_654oy"]
[ext_resource type="Texture2D" uid="uid://bk0pgp30181aw" path="res://resources/sprites/pauseMain.png" id="6_kwdbo"]
[ext_resource type="Script" uid="uid://bc7sbrtfs8nd1" path="res://scripts/menus/menu_texture_button.gd" id="6_mb26x"]
[ext_resource type="Texture2D" uid="uid://dfr3okv2urci2" path="res://resources/sprites/pauseMainSelect.png" id="7_devpi"]
[ext_resource type="Texture2D" uid="uid://bpbginp3bsj4h" path="res://resources/sprites/pauseMainHover.png" id="8_u7ct7"]
[ext_resource type="Texture2D" uid="uid://csky4dqvqhs7d" path="res://resources/sprites/pauseOptions.png" id="10_2pedh"]
[ext_resource type="Texture2D" uid="uid://cxx36hi74kwv0" path="res://resources/sprites/pauseOptionsSelect.png" id="11_6d2ur"]
[ext_resource type="Texture2D" uid="uid://dl1o7b1idtmc4" path="res://resources/sprites/pauseOptionsHover.png" id="12_0dble"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rdkub"]
shader = ExtResource("2_5nn8h")
shader_parameter/strength = 2.454
shader_parameter/mix_percentage = 0.024

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hr5ih")
slide_in_speed = 10.0

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rdkub")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.141176)

[node name="PauseMenuSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -620.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_2yk66")
expand_mode = 3
stretch_mode = 4

[node name="PauseMenuButtonContainers" type="VBoxContainer" parent="PauseMenuSprite"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 108.0
offset_top = -138.0
offset_right = 395.0
offset_bottom = 244.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Resume" type="TextureButton" parent="PauseMenuSprite/PauseMenuButtonContainers"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("6_kwdbo")
texture_pressed = ExtResource("7_devpi")
texture_hover = ExtResource("8_u7ct7")
texture_disabled = ExtResource("6_kwdbo")
texture_focused = ExtResource("6_kwdbo")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_mb26x")

[node name="Label" type="Label" parent="PauseMenuSprite/PauseMenuButtonContainers/Resume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_654oy")
theme_override_font_sizes/font_size = 40
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToMainMenu" type="TextureButton" parent="PauseMenuSprite/PauseMenuButtonContainers"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("10_2pedh")
texture_pressed = ExtResource("11_6d2ur")
texture_hover = ExtResource("12_0dble")
texture_disabled = ExtResource("10_2pedh")
texture_focused = ExtResource("10_2pedh")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_mb26x")

[node name="Label" type="Label" parent="PauseMenuSprite/PauseMenuButtonContainers/ToMainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_654oy")
theme_override_font_sizes/font_size = 40
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="PauseMenuSprite/PauseMenuButtonContainers"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("6_kwdbo")
texture_pressed = ExtResource("7_devpi")
texture_hover = ExtResource("8_u7ct7")
texture_disabled = ExtResource("6_kwdbo")
texture_focused = ExtResource("6_kwdbo")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_mb26x")

[node name="Label" type="Label" parent="PauseMenuSprite/PauseMenuButtonContainers/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_654oy")
theme_override_font_sizes/font_size = 40
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PauseMenuSprite/PauseMenuButtonContainers/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuSprite/PauseMenuButtonContainers/ToMainMenu" to="." method="_on_to_main_menu_pressed"]
[connection signal="pressed" from="PauseMenuSprite/PauseMenuButtonContainers/Quit" to="." method="_on_quit_pressed"]
